# SImSiT

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.docker/: Dockerfile
.github/workflows/: build_docs.yml  test.yml
.gitlab/: subscribed_pipelines.yml
JOSS/: paper.bib  paper.md
branches/iod/: 20001_tim_tle.txt  README.md  README_private.md  process_lmfit.py  score_submission.py
branches/track_images/: README.md  gmm100.pkl  score_submission.py
branches/tracking/: README.md  score_submission.py
branches/tracking/sidereal/private/: 0001.wcs.fits  0001.wcst.fits  0002.wcs.fits  0002.wcst.fits  0003.wcs.fits  0003.wcst.fits  0004.wcs.fits  0004.wcst.fits  0005.wcs.fits  0005.wcst.fits  0006.wcs.fits  0006.wcst.fits  0007.wcs.fits  0007.wcst.fits  0008.wcs.fits  0008.wcst.fits  0009.wcs.fits  0009.wcst.fits  0010.wcs.fits  0010.wcst.fits  0011.wcs.fits  0011.wcst.fits  0012.wcs.fits  0012.wcst.fits  0013.wcs.fits  0013.wcst.fits  0014.wcs.fits  0014.wcst.fits  0015.wcs.fits  0015.wcst.fits  0016.wcs.fits  0016.wcst.fits  0017.wcs.fits  0017.wcst.fits  (+123 more)
docs/: requirements.txt
docs/source/: acknowledgements.rst  api.rst  background.rst  changelog.rst  conf.py  contributing.rst  developer.rst  gettingstarted.rst  index.rst  installation.rst
satist/: cadence.py  catalog.py  photometry.py  simulate.py
scripts/: simulate.py
tests/: test_cadence.py  test_stars.py  test_wcs.py
xfiles/: catalog.py  tracker.py  uncertainty_metrics.py  wcs.py
xfiles.egg-info/: PKG-INFO  SOURCES.txt
(+1 files in other folders)
